gvariant: Fix minor memory leak on error handling path

(Commit message by Philip Withnall.)

https://bugzilla.gnome.org/show_bug.cgi?id=760022