glib/gvariant-parser.c
@@ -1724,6 +1724,7 @@ bytestring_parse (TokenStream  *stream,
         parser_set_error (error, &ref, NULL,
                           G_VARIANT_PARSE_ERROR_UNTERMINATED_STRING_CONSTANT,
                           "unterminated string constant");
+        g_free (str);
         g_free (token);
         return NULL;
 
@@ -1734,6 +1735,7 @@ bytestring_parse (TokenStream  *stream,
             parser_set_error (error, &ref, NULL,
                               G_VARIANT_PARSE_ERROR_UNTERMINATED_STRING_CONSTANT,
                               "unterminated string constant");
+            g_free (str);
             g_free (token);
             return NULL;
 
